Fixed app crash on cases search in countries with regions. Added message to country list, when user entered non-matching country name.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,6 +197,7 @@
     <string name="Yemen">Yemen</string>
     <string name="Zambia">Zambia</string>
     <string name="Zimbabwe">Zimbabwe</string>
+    <string name="no_matching_countries">No matching countries</string>
 
 
     <!--    Côte d'Ivoire-->
